# rinha-2026

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  go.mod  go.sum  haproxy.cfg  info.json  nginx.conf
.cargo/: config.toml
cmd/api/: main.go
crates/api/: Cargo.toml
crates/api/src/: http.rs  main.rs
crates/api/tests/: smoke.rs
crates/ivf-core/: Cargo.toml
crates/ivf-core/src/: engine.rs  format.rs  kmeans.rs  lib.rs  norm.rs  response.rs  simd.rs  vector.rs
crates/refvec-builder/: Cargo.toml
crates/refvec-builder/src/: main.rs
docs/plans/: 2026-04-27-knn-flat-float32.md
docs/superpowers/plans/: 2026-05-06-rust-ivf-rewrite.md
docs/superpowers/specs/: 2026-05-06-rust-ivf-rewrite-design.md
internal/features/frauddetec/: refdata.go
internal/fraud/: knn.go  references.go  vector.go
internal/handler/: handler.go
internal/infra/telemetry/: telemetry.go
lb/: Dockerfile  build.zig.zon
lb/src/: main.zig
src/: ivf.rs  lib.rs  main.rs  vectorize.rs
test/: results.json  test.js
