[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_lib"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "builder"
path = "src/bin/builder.rs"

[[bin]]
name = "tune"
path = "src/bin/tune.rs"

[[bin]]
name = "pgo_train"
path = "src/bin/pgo_train.rs"

[dependencies]
libc = "0.2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
