[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
ivf-core = { path = "../ivf-core" }
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
bytes = "1"
serde_json = "1"
mimalloc = { version = "0.1", default-features = false }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies.opentelemetry]
version = "0.27"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.27"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.27"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.28"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
