[package]
name = "refvec-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "refvec-builder"
path = "src/main.rs"

[dependencies]
ivf-core = { path = "../ivf-core" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
